# python-ci-cd-hooks

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-pytest.yml  ci.yml
data/: sample_reviews.csv
hooks/: pre-commit-config.yaml
model/: deekseep_r1_model.py
notebooks/: 01_deep_seek_r1_chabot.ipynb  01_llama3_chabot.ipynb  02_deep_seek_r1_chatbot.ipynb  02_python_hooks_precommit.ipynb
src/: main.py
tests/: test_example.py  test_model.py
